--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- Nav-Bar/Hero Section Starts Here -->
+
+    <!-- Nav-Bar/Hero Section Ends Here -->
+
+    <!-- Crypto Currencies Section Starts Here -->
     
+    <!-- Crypto Currencies Section Ends Here -->
 </body>
 </html>
