--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <!-- Nav-Bar/Hero Section Ends Here -->
 
     <!-- Crypto Currencies Section Starts Here -->
-    
+
     <!-- Crypto Currencies Section Ends Here -->
+
+    <!-- Buy Crypto Currencies - Private And Secure Section Starts Here -->
+
+    <!-- Buy Crypto Currencies - Private And Secure Section Ends Here -->
+
+    <!-- Get Started - Trust Wallet App Section Starts Here -->
+
+    <!-- Get Started - Trust Wallet App Section Ends Here -->
+
+    <!-- Footer Section Starts Here -->
+
+    <!-- Footer Section Ends Here -->
 </body>
 </html>
