--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="container">
     <!-- Nav-Bar/Hero Section Starts Here -->
 
     <!-- Nav-Bar/Hero Section Ends Here -->
@@ -26,5 +28,7 @@
     <!-- Footer Section Starts Here -->
 
     <!-- Footer Section Ends Here -->
+    </div>
 </body>
+
 </html>
