--- a/index.html
+++ b/index.html
@@ -40,17 +40,15 @@
                     </div>
                     <div class="download">
                         <div class="download-here">
-                            <div class="apple-logo"><img
-                                    src="/images/Financial Analyst Course (250+ Training Courses, Online Certification).png"
-                                    alt=""></div>
-                            <div class="playstore-logo"><img src="/images/playstore.jpg" alt=""></div>
+                            <div class="apple-logo"><img src="/images/download_on_the_appstore.png"alt=""></div>
+                            <div class="playstore-logo"><img src="/images/get_it_on_googleplay.png" alt=""></div>
                             <div class="andriod-logo"><img src="/images/android.png" alt=""></div>
-                            <div class="chrome-logo"><img src="/images/available for chrome.png" alt=""></div>
+                            <div class="chrome-logo"><img src="/images/available_for_chrome.png" alt=""></div>
                         </div>
                     </div>
                 </div>
                 <div class="side-2">
-                    <img src="/images/navbar.img.trustwallet.png" alt="">
+                    <img src="/images/home_hero.png" alt="">
                 </div>
             </div>
         </div>
